XMLExper/m12/m12_63_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘char* tinyxml2::XMLDocument::Identify(char*, tinyxml2::XMLNode**, bool)’:
tinyxml2.cpp:762:111: error: lvalue required as left operand of assignment
  762 |         /*PCI*/dynamic_cast<tinyxml2::XMLComment*>(returnNode) = CreateUnlinkedNode<XMLUnknown>( _commentPool );
      |                                                                                                               ^
diff: tinyxml2.S: No such file or directory
